# coffer

./: .gitignore  2  Cargo.toml  LICENSE  README.md  board.dtb  board.dts  coffer  coffer.striped  justfile  tags  temp.dtb
.cargo/: config.toml
linkscript/: link-qemu-64.ld  link-rvbt.ld  link-sunxi-64.ld  link-virt-64.ld
platform/qemu/: Cargo.toml  Cargo.toml.saved  build.rs  gen.py  justfile  qemu.striped
platform/qemu/.cargo/: config.toml
platform/qemu/linkscript/: link-dwarf.ld  link-qemu-64.ld  link-sunxi-64.ld
platform/qemu/src/: main.rs
platform/qemu/src/ecall/: ipi.rs  mod.rs
platform/qemu/src/hal/: clint.rs  mod.rs  ns16550a.rs  sifive_uart.rs  sunxi_uart.rs
platform/qemu/src/memory/: memory_layout.rs  mod.rs  pmp.rs
platform/qemu/src/runtime/: context.rs  mod.rs  runtime.rs
platform/qemu/src/rvbt/: frame.rs  mod.rs  symbol.rs
platform/qemu/src/sbi/: console.rs  hart_mask.rs  hsm.rs  ipi.rs  mod.rs  rfence.rs  sbiret.rs  srst.rs  timer.rs
platform/qemu/src/util/: fdt.rs  mod.rs  reg.rs  self_test.rs  status.rs
src/: main.rs
src/ecall/: base.rs  hsm.rs  ipi.rs  mod.rs  rfence.rs  srst.rs  timer.rs
src/fdt/: cstr.rs  endian.rs  header.rs  memory_reserve.rs  mod.rs  node.rs  prop.rs  token.rs
src/hal/: clint.rs  clint32.rs  mod.rs  ns16550a.rs  sifive_uart.rs  sunxi_uart.rs  tlb.rs
src/memory/: memory_layout.rs  mod.rs  pmp.rs
src/platform/: generic.rs  mod.rs  sifive.rs  sunxi.rs  virt.rs
src/runtime/: context.rs  mod.rs  runtime.rs
src/rvbt/: frame.rs  init.rs  mod.rs  symbol.rs
src/sbi/: console.rs  fence_info.rs  hart_mask.rs  hart_scratch.rs  hsm.rs  ipi.rs  ipi_event.rs  mod.rs  rfence.rs  sbiret.rs  (+2 more)
(+9 files in other folders)
