[package]
name = "coffer"
version = "0.1.0"
authors = ["john <799433746@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
riscv = { path="/home/john/Documents/riscv/" }
embedded-hal = "1.0.0-alpha.4"
nb = "1"
spin = "0.9.1"
lazy_static = { version="1.4", features = ["spin_no_std"]  }
buddy_system_allocator = "0.8"
fdt = "0.1.3"
if_chain = "1.0.1"
bit_field = "0.10.1"
bitflags = "1.2.1"

gimli = { version = "0.24", default-features = false, features = ["read", "endian-reader", "stable_deref_trait"] }
addr2line = { version = "0.15.2", default-features = false, features = ["rustc-demangle"] }
goblin = { version = "0.4.2", default-features = false, features = ["elf32", "elf64", "endian_fd"] }

[features]
default = ["sunxi"]
sunxi = []
